# Explicator

./: ISSUE.md  README.md  claude_desktop_config.json.example  pyproject.toml
examples/demo_model/: run_web.py
src/explicator/: __init__.py
src/explicator/adapters/web/: __init__.py  app.py
src/explicator/adapters/web/static/: index.html
src/explicator/ai/: orchestrator.py
