[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[project]
name = "explicator"
version = "0.1.1"
authors = [{ name = "Tim le Poidevin", email = "lepoidevin.tim@gmail.com" }]
description = "Provider-agnostic natural language AI interface to interact with complex analytical models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0", "click>=8.0", "python-dotenv>=1.0"]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
azure = ["openai>=1.0.0"]
web = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
  "mcp[cli]",
  "pre-commit>=4.5.1",
  "ruff>=0.15.4",
]

[project.scripts]
explicator = "explicator.adapters.cli.main:cli"
explicator-mcp = "explicator.adapters.mcp_server.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
